[tool.poetry]
name = "blackxcard-api"
version = "0.1.0"
description = "BlackXCard CC Checker API"
authors = ["Your Name <your@email.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.109.0"
uvicorn = "^0.27.0"
requests = "^2.31.0"
aiohttp = "^3.9.1"
beautifulsoup4 = "^4.12.3"
pydantic = "^2.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

